update z-index, undef issue

--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -49,7 +49,7 @@
   position: absolute;
   top: 93px;
   width: 100%;
-  z-index: 2;
+  z-index: 100;
 }
 
 .docs-layout__content {
